--- a/compiler-plugin/src/main/resources/application-dev.properties
+++ b/compiler-plugin/src/main/resources/application-dev.properties
@@ -1,6 +1,6 @@
 # redis client
 spring.jedis.port=60010
-spring.jedis.host=10.1.163.87
+spring.jedis.host=localhost
 spring.jedis.maxWaitMillis=30000
 spring.jedis.minIdle=100
 spring.jedis.auth=estateRedis
