--- a/compiler-core/pom.xml
+++ b/compiler-core/pom.xml
@@ -30,7 +30,7 @@
         <repository>
             <id>city-repository</id>
             <name>city Repository</name>
-            <url>http://10.1.159.95:8090/repository/city-repository/</url>
+            <url>http://localhost:8090/repository/city-repository/</url>
         </repository>
     </distributionManagement>
     <build>
@@ -52,32 +52,18 @@
             </plugin>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-site-plugin</artifactId>
-                <version>3.7.1</version>
+                <artifactId>maven-surefire-plugin</artifactId>
+                <configuration>
+                    <skip>true</skip>
+                </configuration>
             </plugin>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-project-info-reports-plugin</artifactId>
-                <version>3.0.0</version>
-            </plugin>
-            <plugin>
-                <artifactId>maven-jar-plugin</artifactId>
-                <executions>
-                    <execution>
-                        <id>lib</id>
-                        <phase>package</phase>
-                        <goals>
-                            <goal>jar</goal>
-                        </goals>
-                        <configuration>
-                            <classifier>lib</classifier>
-                            <excludes>
-                                <exclude>application*.properties</exclude>
-                                <exclude>config</exclude>
-                            </excludes>
-                        </configuration>
-                    </execution>
-                </executions>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <configuration>
+                    <source>${java.version}</source>
+                    <target>${java.version}</target>
+                </configuration>
             </plugin>
         </plugins>
     </build>
