--- a/compiler-core/pom.xml
+++ b/compiler-core/pom.xml
@@ -5,7 +5,7 @@
     <parent>
         <groupId>com.semitransfer</groupId>
         <artifactId>compiler-parent</artifactId>
-        <version>0.0.37.RELEASE</version>
+        <version>0.0.39.RELEASE</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
@@ -71,10 +71,13 @@
 
     <distributionManagement>
         <repository>
-            <id>city-repository</id>
-            <name>city Repository</name>
-            <url>http://10.1.159.95:8090/repository/city-repository/</url>
+            <id>rdc-releases</id>
+            <url>https://repo.rdc.aliyun.com/repository/126554-release-0Oq8hH/</url>
         </repository>
+        <snapshotRepository>
+            <id>rdc-snapshots</id>
+            <url>https://repo.rdc.aliyun.com/repository/126554-snapshot-8tszAa/</url>
+        </snapshotRepository>
     </distributionManagement>
     <build>
         <plugins>
